Refactor Drug Application API: Introduce DTOs, enhance validation, and improve error handling